<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#cbdee2">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/newgamemenu_gamesize"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#354751"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        android:onClick="musicOnClick">

        <RelativeLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="30dp"
            android:background="#354751"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/newGameMenuGameSizeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:padding="10dp"
                android:background="#cbdee2"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:entries="@array/gamesizes"
                android:spinnerMode="dropdown"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_toStartOf="@+id/imageView"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@drawable/drop"
                android:layout_marginRight="30dp"
                android:id="@+id/imageView" />

        </RelativeLayout>

        <Button
            android:id="@+id/musicButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="@drawable/music"
            android:layout_marginLeft="30dp"
            android:clickable="true"
            android:onClick="musicOnClick" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:clickable="true">

        <ImageView
            android:id="@+id/selectedImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:maxHeight="100dp"
            android:maxWidth="100dp"
            android:src="@drawable/icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <!--Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newgamemenu_button_pickbuiltin" /-->

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="pickImageOnClick"
            android:text="@string/newgamemenu_button_pickfromsd"
            android:textColor="#354751"
            android:background="@drawable/my_button"
            android:textSize="26dp"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="TakePhotoOnClick"
            android:text="@string/newgamemenu_button_shootphoto"
            android:textColor="#354751"
            android:background="@drawable/my_button"
            android:textSize="26dp"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:onClick="playOnClick"
        android:text="@string/newgamemenu_ok"
        android:textSize="40dp"
        android:typeface="normal"
        android:textColor="#354751"
        android:layout_centerInParent="true"
        android:background="@drawable/my_button"
        android:layout_gravity="center_horizontal" />

    <Gallery
        android:id="@+id/gallery1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="backToMainOnClick"
        android:text="@string/newgamemenu_back"
        android:textColor="#354751"
        android:background="@drawable/my_button"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textSize="26dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>